# aether

./: -  .gitignore  README.md  build_all.sh  docker-compose.yaml  generated_model.py  pyproject.toml  test_mission.json
.agent/: rules.md
.agent/workflows/: build.md  simulate_drone.md
.github/workflows/: ci.yml
aether/cloud-bridge/: Dockerfile  requirements.txt
aether/cloud-bridge/src/: bridge.py  main.py  mavlink.py  mission.py  mqtt.py
aether/cloud-bridge/tests/: test_bridge.py  test_bridge_context.py  test_mavlink_async.py  test_mavlink_commands.py  test_mission.py
aether/common/: pyproject.toml
aether/common/src/aether_common/: detection.py  generated.py  telemetry.py
aether/common/tests/: test_detection.py
aether/docker-sitl/: Dockerfile  build.sh  entrypoint.sh  run-drone.sh
aether/docs/: info-grafic.html  overview.md
aether/infra/: app.py
aether/infra/infra/: infra_stack.py  iot_stack.py
aether/infra/scripts/: provision_drone.py
aether/infra/tests/unit/: test_infra_stack.py
aether/orchestrator/: Dockerfile  debug_model.py  pyproject.toml  requirements.txt
aether/orchestrator/src/: activities.py  detection_rules.py  dispatch_mission.py  dispatcher.py  ensure_fleet.py  main.py  processor.py  start_mission.py  workflows.py
aether/orchestrator/tests/: test_detection_logic.py  test_dispatcher.py  test_entity_workflow.py  test_mission_request.py  test_mission_safety.py  test_workflow.py
aether/orchestrator/tests/integration/: mock_drone.py  test_e2e_fleet.py
research/: mission_planning_and_dispatch.md  mission_safety_protocol.md  passive_tracking_architecture.md  passive_tracking_pivot.md  persistent_entity_model.md
schemas/: command.json  events.json  mission.json  mission_plan.json  telemetry.json
scripts/: build_all.sh  build_bridge.sh  kill_all_drones.py  spawn_drone.py  spawn_drone.sh
tools/: mock_iot_events.py  simulate_telemetry.py  watch_mqtt.py
